@@ -23,3 +23,7 @@
 <p>
 	<strong>Image sources with fallbacks</strong>. You can choose to pull the Extra Image for the OpenGraph image template from the article's intro image, the article's full-text image, or a custom field – exclusively, or as a fallback to each other in any combination and order you want. For categories, you can choose between the category's image, and a custom field, exclusively or as a fallback to each other in any order you want.
 </p>
+
+<p>
+	<strong>ImageMagick: Show ellipses when text is being truncated</strong>. When text overlaid on an OpenGraph image is being truncated, the ellipses are now shown regardless of whether you use the ImageMagick or the GD library.
+</p>
